--- a/github.com/cloudwego/netpoll/源码阅读.md
+++ b/github.com/cloudwego/netpoll/源码阅读.md
@@ -56,6 +56,13 @@ func handle(ctx context.Context, connection netpoll.Connection) error { // onReq
 }
 ```
 
+# 文件级别的分析
+| sys_epoll_linux.go | epoll 的各个函数的封装 |
+| poll_manager.go | 负责 epoll 协程的创建 |
+| poll_loadbalance.go | 有新连接发生的时候，选择使用哪一个 epoll_wait 协程 |
+| netpoll.go | 用户使用这个库的入口 | 
+
+
 # 全局初始化
 | 源码 | 函数 | 调用了 | 被调函数 | 说明 |
 | ---- | ---- | ---- | ---- | ---- |
@@ -134,7 +141,20 @@ epoll_wait  的协程代码:
 | ---- | ---- | ---- | ---- | ---- |
 | connection_reactor.go:83 | func (c *connection) inputs(vs [][]byte)  | - | - | - |
 
+## onrequest 的触发流程
+| 源码 | 函数 | 调用了 | 被调函数 | 说明 |
+| ---- | ---- | ---- | ---- | ---- |
+| connection_reactor.go:89 | func (c *connection) inputAck(n int) | - | - | - |
+| - | - | - | :110 | needTrigger = c.onRequest() | readv 之后，触发 onrequest |
+| connection_onevent.go:150 | func (c *connection) onRequest() | - | - | - |
+| - | - | :151 | c.onRequestCallback.Load().(OnRequest) | 读出用户配置的函数 |
+| - | - | :155 | c.onProcess() | 再调用 process 函数 |
+| :170 | func (c *connection) onProcess() | - | - | - |
+| - | - | :175 | if !c.lock(processing) | 回调之前要加锁 |
+| - | - | :179 | var task = func() {...} | 包装一个长长的处理函数 | 
+| - | - | :231 | runTask(c.ctx, task) | 默认使用协程池来执行 onRequest |
 
+* OnRequest 会被多次触发，每当 epoll_wait 中有事件的时候，就会触发一次
 
 ## 新用户数据写入
 
@@ -155,3 +175,30 @@ NewLinkBuffer()
 * 为什么不让用户配置 OnRequest
 * 为什么 read timeout, write timeout, onIdle 等都不生效?
 * 如果包与包之间，到达服务器的间隔比较长，epoll 事件循环中对应的行为是怎么样的?
+* 能不能设置 socket buffer ?
+* 读事件产生后，数据究竟是怎么读进去的？
+* syscall 与  rawSyscall 的区别
+
+* 依赖的组件：
+  - github.com/bytedance/gopkg/lang/mcache  slab 内存池
+  - gopool
+
+* 因为 readv 调用，所以数据一定会至少发生一次拷贝
+
+
+
+# 系统调用相关的背景知识
+```
+ 1 typedef union epoll_data {
+ 2     void *ptr;
+ 3     int fd;
+ 4     __uint32_t u32;
+ 5     __uint64_t u64;
+ 6 } epoll_data_t;
+ 7 
+ 8 struct epoll_event {
+ 9     __uint32_t events; /* Epoll events */
+10     epoll_data_t data; /* User data variable */
+11 };
+```
+
