--- a/github.com/cloudwego/netpoll/源码阅读.md
+++ b/github.com/cloudwego/netpoll/源码阅读.md
@@ -184,8 +184,10 @@ NewLinkBuffer()
   - gopool
 
 * 因为 readv 调用，所以数据一定会至少发生一次拷贝
-
-
+* ??? onRequest 只会被调用一次，除非要断掉这个连接，否则不应该退出 onRequest()
+* ??? 用户倒底能不能主动关闭一个连接?
+* mux/sharedQueue: 这个目录针对 rpc 框架又做了很多封装
+ 
 
 # 系统调用相关的背景知识
 ```
