--- a/github.com/cloudwego/netpoll/源码阅读.md
+++ b/github.com/cloudwego/netpoll/源码阅读.md
@@ -169,14 +169,17 @@ NewLinkBuffer()
 及其 barrier 池
 
 * 内存池怎么设计的?
+  - link buffer
 * 协程池怎么设计的?
+  - gopool
 * 零拷贝是怎么支持的?
+  - 没有支持零拷贝
 
-* 为什么不让用户配置 OnRequest
 * 为什么 read timeout, write timeout, onIdle 等都不生效?
 * 如果包与包之间，到达服务器的间隔比较长，epoll 事件循环中对应的行为是怎么样的?
 * 能不能设置 socket buffer ?
 * 读事件产生后，数据究竟是怎么读进去的？
+  - readv 系统调用，在 epoll_wait 协程中完成
 * syscall 与  rawSyscall 的区别
 
 * 依赖的组件：
@@ -187,7 +190,8 @@ NewLinkBuffer()
 * ??? onRequest 只会被调用一次，除非要断掉这个连接，否则不应该退出 onRequest()
 * ??? 用户倒底能不能主动关闭一个连接?
 * mux/sharedQueue: 这个目录针对 rpc 框架又做了很多封装
- 
+* 为什么  client fd 没有注册写事件? 
+* 数据倒底是怎么发送出去的?
 
 # 系统调用相关的背景知识
 ```
@@ -203,4 +207,18 @@ NewLinkBuffer()
 10     epoll_data_t data; /* User data variable */
 11 };
 ```
+
+# 写事件触发流程
+
+
+| 源码 | 函数 | 调用了 | 被调函数 | 说明 |
+| ---- | ---- | ---- | ---- | ---- |
+| poll_default_linux.go:118 | func (p *defaultPoll) handler(events []epollevent) | - | - | - |
+| - | - | :196 | `if triggerWrite {` | 写事件开始处理了 |
+| - | - | :205 | var n, err = iosend() | 使用系统调用发送数据 |
+| net_io.go:39 | func iosend(fd int, bs [][]byte, ivs []syscall.Iovec, zerocopy bool) | - | - | - |
+| - | - | :40 | sendmsg(fd, bs, ivs, zerocopy) | - |
+| sys_sendmsg_linux.go:34 | func sendmsg() | - | - | 系统调用，相当于 writev |
+
+* 仅当  socket write buffer full 的时候，才会注册写事件
 
