--- a/github.com/cloudwego/netpoll_v0.5.0/源码阅读.md
+++ b/github.com/cloudwego/netpoll_v0.5.0/源码阅读.md
@@ -191,7 +191,14 @@ NewLinkBuffer()
 * ??? 用户倒底能不能主动关闭一个连接?
 * mux/sharedQueue: 这个目录针对 rpc 框架又做了很多封装
 * 为什么  client fd 没有注册写事件? 
+  - 不需要，仅当 socket write buffer full 时，才需要注册
 * 数据倒底是怎么发送出去的?
+  - 用户把数据拷贝到 output buffer
+  - 使用 sendmsg 系统调用把数据发出去
+  - 如果 socket write buffer 写满，注册写事件
+  - epoll_wait 协程中等待写事件触发，在事件循环的协程中再次发送
+* 当一个连接再次来包，处理流程是怎么样的?
+* 何时断开客户端的连接？
 
 # 系统调用相关的背景知识
 ```
@@ -222,3 +229,8 @@ NewLinkBuffer()
 
 * 仅当  socket write buffer full 的时候，才会注册写事件
 
+* 学会使用，应该要读这些文件的注释：
+  - connection.go
+  - eventloop.go
+  - nocopy.go
+  - poll.go
