add comment for LinkBuffer

--- a/github.com/cloudwego/netpoll_v0.5.0/源码阅读.md
+++ b/github.com/cloudwego/netpoll_v0.5.0/源码阅读.md
@@ -234,3 +234,12 @@ NewLinkBuffer()
   - eventloop.go
   - nocopy.go
   - poll.go
+
+
+# 不足之处
+* LinkBuffer 这个对象又支持读，又支持写。但实际应用中没有又读又写的场景。
+  - 建议分成两个类，更加清晰
+* 为了更好的支持文本协议：
+  - 提供查找一个字符串的接口，不仅仅只是查找一个字符
+  - bytes.IndexOfByte() 提供  simd 的版本
+
